Weight Paint - Custom Color Ranges don't update in 3D Viewport on changing #39087

Closed
opened 2014-03-10 11:56:08 +01:00 by Terry Wallwork · 6 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I am using Blender GIT Rev 2014-03-10-15-17-22-48e99c0 on
a Fedora 20 Linux 64Bit Box with an Intel 3000 HD GFX card

I noticed that when using the custom Weight Painting colors
that the colors shown in the 3D Viewport don't update until
you switch color ramp stops or toggle the 3D Viewport.

I have attached my system-info.txt, a demo blend file and a video.

system-info.txt

WeightPaintCustomColorWeights.blend

WeightPaintCustomColors.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT Rev 2014-03-10-15-17-22-48e99c0 on a Fedora 20 Linux 64Bit Box with an Intel 3000 HD GFX card I noticed that when using the custom Weight Painting colors that the colors shown in the 3D Viewport don't update until you switch color ramp stops or toggle the 3D Viewport. I have attached my system-info.txt, a demo blend file and a video. [system-info.txt](https://archive.blender.org/developer/F80524/system-info.txt) [WeightPaintCustomColorWeights.blend](https://archive.blender.org/developer/F80525/WeightPaintCustomColorWeights.blend) [WeightPaintCustomColors.webm](https://archive.blender.org/developer/F80526/WeightPaintCustomColors.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

This issue was referenced by blender/blender-addons-contrib@ced595a37d

This issue was referenced by blender/blender-addons-contrib@ced595a37d373e9a27f2ac0ed24f975dfdab4818

This issue was referenced by ced595a37d

This issue was referenced by ced595a37d373e9a27f2ac0ed24f975dfdab4818

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ced595a37d.

Closed by commit ced595a37d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39087
No description provided.