Fix T39087: Weight Paint, custom color ranges don't update in viewport